Made some minor changes to the package jason file.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-passport-auth",
-  "version": "0.0.0",
+  "name": "open-game-plot",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node server.js"
